fix overflow

--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -4,6 +4,7 @@
 	max-width: 1440px;
 	margin-inline: auto;
 	position: relative;
+	overflow: hidden;
 
 	.container {
 		display: flex;
@@ -83,11 +84,15 @@
 
 		.letconnect__social {
 			position: absolute;
-			top: 0;
-			right: 10px;
+			top: 50px;
+			right: 0;
 			margin: 0;
 			flex-direction: column;
 			gap: 20px;
+
+			@include mobile-l {
+				right: 40px;
+			}
 		}
 	}
 	.img-ellipse {
